Change layout and fix overflow-x for .reservaciones

--- a/app/styles/modules/_reservaciones.sass
+++ b/app/styles/modules/_reservaciones.sass
@@ -2,3 +2,4 @@
   margin-bottom: 2rem
   max-height: 50vh
   width: 100%
+  overflow-x: hidden
